@@ -1,5 +1,9 @@
 version 1.9.14, in progress
 - Some fixes for the SAS xport file importer
+- Fix for gretl-quartz (Mac) package: enable aquaterm in
+  the gnuplot build
+- Experimental: use daily dates when plotting daily/weely
+  data and there are not too many observations
 
 2013-10-24 version 1.9.13
 - Add Bulgarian, Catalan and Galician translations
